update docs, readme and contributing
