# src/controllers/user.go
@@ -6,10 +6,22 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
-	"github.com/josesalasdev/golang_api_template/src/models"
+	"github.com/josesalasdev/book-shop/src/models"
 )
 
+// userResponse is a response.
+type userResponse struct {
+	Message string `json:"message"`
+}
+
 // CreateUser controller.
+// @Summary Create an user.
+// @Description Create an user.
+// @Accept  json
+// @Produce  json
+// @Param data body models.UserInput true "user Data"
+// @Success 200 {object} userResponse
+// @Router /user/ [post]
 func CreateUser(c *gin.Context) {
 	// Validate input
 	var input models.UserInput
@@ -26,5 +38,5 @@ func CreateUser(c *gin.Context) {
 	user.EncryptPassword()
 	models.DB.Create(&user)
 
-	c.JSON(http.StatusCreated, gin.H{"message": "OK"})
+	c.JSON(http.StatusCreated, userResponse{"OK"})
 }
